# scara_description

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
gazebo/: scara_physics.gazebo  scara_plugins.gazebo
launch/: combined_controller.launch  controller.launch  controller.yaml  display.launch  gazebo.launch
meshes/: base_link.stl  chuck_link_1.stl  drill_link_1.stl  ee_link_1.stl  elbow_link_1.stl  motor_link_1.stl  shoulder_link_1.stl  wrist_link_1.stl
urdf/: materials.xacro  scara.trans  scara.xacro
urdf/gazebo/: scara_materials.gazebo  scara_physics.gazebo  scara_plugins.gazebo
